# OncallAgent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.prometheus.yml  go.mod  go.sum  pyproject.toml
docs/: resource-community-error-rate.md
docs/development/: agent-harness-sdd-development-process.md
docs/evaluation/: harness-agent-run.md  incident-demo-flow.md  rag-eval.md  tool-governance.md
docs/runbooks/: resource-community-hot-ranking.md  resource-community-p95-latency.md  resource-community-rabbitmq-backlog.md
eval/: rag_questions.json
internal/harness/: budget.go  budget_test.go  evidence.go  state.go  state_test.go
internal/server/ai/agent/chat/: new_react_agent.go
internal/server/ai/agent/plan_execute_replan/: execute.go
internal/server/ai/tools/: rag.go
oncallagent/: __init__.py  agent.py  chat.py  chat_agent.py  config.py  demo_flow.py  embedding.py  external_indexer.py  factory.py  harness.py  indexing.py  knowledge.py  llm.py  main.py  mcp.py  plan.py  qdrant.py  rag_eval.py  tool_runtime.py  tools.py
prometheusTestServer/: Dockerfile  main.py
scripts/: demo_incident_flow.py  rag_eval.py
tests/: test_agent.py  test_agent_llm_components.py  test_api.py  test_chat_agent.py  test_config.py  test_demo_flow.py  test_embedding.py  test_external_indexer.py  test_factory.py  test_harness.py  test_indexing.py  test_llm.py  test_mcp.py  test_plan.py  test_prometheus_test_server.py  test_qdrant.py  test_rag_eval.py  test_tool_runtime.py  test_tools.py
